syntax = "proto3";

option csharp_namespace = "Protos.Streaming";

package streaming;

service StreamingService {
	rpc ServerStreaming (ServerStreamRequest) returns (stream ServerStreamResponse);
	rpc ClientStreaming (stream ClientStreamRequest) returns (ClientStreamResponse);
}

message ServerStreamRequest {
	string name = 1;
}

message ServerStreamResponse {
	string message = 1;
}

message ClientStreamRequest {
	string caller = 1;
	string message = 2;
}

message ClientStreamResponse {
	string message = 1;
}